@@ -1,3 +1,7 @@
+* 2013-05-02 - tobias.friedrich@open-xchange.com
+
+ - Fix for bug 25672: Don't delete already existing delete exceptions   
+
 * 2013-05-02 - thorben.betten@open-xchange.com
 
  - Fix for bug 26300: Deal with absent session when checking request-count boundary
